--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Welcome to My Homepage</h1>
-  <div id="githubPages"></div>
-  <div id="youtubeVideos"></div>
+  <header>
+    <h1>Welcome to My Homepage</h1>
+  </header>
+  
+  <section id="githubPages">
+    <h2>My GitHub Pages</h2>
+    <ul id="githubPagesList"></ul>
+  </section>
+  
+  <section id="youtubeVideos">
+    <h2>My YouTube Videos</h2>
+    <ul id="youtubeVideosList"></ul>
+  </section>
 
   <script src="script.js"></script>
 </body>
