--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Homepage</title>
+  <title>My Cool Homepage</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to My Homepage</h1>
+    <h1>Welcome to My Cool Homepage</h1>
+    <div class="toggle-container">
+      <input type="checkbox" id="darkModeToggle">
+      <label for="darkModeToggle" class="toggle">
+        <span class="toggle-handle"></span>
+      </label>
+      <span class="toggle-label">Dark Mode</span>
+    </div>
   </header>
   
   <section id="githubPages">
