--- a/index.html
+++ b/index.html
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Cool Homepage</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Minecraft Content Creator</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Welcome to My Cool Homepage</h1>
-    <div class="toggle-container">
-      <input type="checkbox" id="darkModeToggle">
-      <label for="darkModeToggle" class="toggle">
-        <span class="toggle-handle"></span>
-      </label>
-      <span class="toggle-label">Dark Mode</span>
-    </div>
-  </header>
-  
-  <section id="githubPages">
-    <h2>My GitHub Pages</h2>
-    <ul id="githubPagesList"></ul>
-  </section>
-  
-  <section id="youtubeVideos">
-    <h2>My YouTube Videos</h2>
-    <ul id="youtubeVideosList"></ul>
-  </section>
+    <header>
+        <h1>Minecraft Content Creator</h1>
+        <div class="toggle-container">
+            <input type="checkbox" id="dark-mode-toggle">
+            <label for="dark-mode-toggle" class="toggle-label"></label>
+        </div>
+    </header>
 
-  <script src="script.js"></script>
+    <main>
+        <div class="videos">
+        </div>
+        <div class="twitter-feed">
+        </div>
+    </main>
+
+    <footer>
+        <ul>
+            <li><a href="#">TikTok</a></li>
+            <li><a href="#">YouTube</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Discord</a></li>
+            <li><a href="#">Twitch</a></li>
+        </ul>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
