remade homepage and added youtube and twitter intergration

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <div class="videos">
         </div>
-        <div class="twitter-feed">
+        <a class="twitter-timeline" href="https://twitter.com/dj_cheesusyt" data-width="400" data-height="800">Tweets by @dj_cheesusyt</a>
         </div>
     </main>
 
