attempt to intergrate script into page

--- a/index.html
+++ b/index.html
@@ -25,5 +25,10 @@
             <div class="profile-pic"></div>
         </main>
     </div>
+
+    <!-- Include jQuery library -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Include scripts.js -->
+    <script src="script.js"></script>
 </body>
 </html>
